--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-admob-next",
-    "version": "1.2.0",
+    "version": "1.2.0-1",
     "description": "A react-native component for Google AdMob banners and interstitials",
     "author": "Izet Molla <izetmolla@gmail.com>",
     "main": "dist/index.js",
