--- a/android/build.gradle
+++ b/android/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.intellij:annotations:+@jar'
-    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+    implementation 'com.google.android.gms:play-services-ads:20.3.0'
+    implementation 'com.google.ads.mediation:facebook:6.8.0.0'
 }
