--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "react-native-admob-next",
-    "version": "1.2.0-2",
+    "version": "1.2.0-3",
     "description": "A react-native component for Google AdMob banners and interstitials",
     "author": "Izet Molla <izetmolla@gmail.com>",
     "main": "dist/index.js",
     "types": "dist/index.d.js",
     "license": "BSD-2-Clause",
+    "publishConfig": {
+        "registry": "http://yarnpkg-1.staging.ssg.org/"
+    },
     "repository": {
         "type": "git",
         "url": "git@github.com:izetmolla/react-native-admob-next.git"
